--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Project</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="web.css">
 <body>
     
     <!-- Navbar code starts here -->
