Added updated index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2>Product Design and Development Engineer</h2>
                 <div class="header-action-area">
                     <a href="#contact" class="btn">Contact Me</a>
-                    <a href="https://drive.google.com/file/d/1jUiZhIqkPV1PXK6QKfqvRCTAl9uM7ZWy/view?usp=drive_link" class="btn btn-dark">Download CV</a>
+                        <a href="cv/CV Oshintha.pdf" class="btn btn-dark" download="CV_Oshintha.pdf">Download CV</a>
                 </div>
                 <div class="header-social">
                     <a href="https://www.linkedin.com/in/oshintha-sandaruwan/">
