Added updated index.html

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
         <div class="container project-container">
             <div class="project">
                 <img src="images/MPT.png" alt="">
-                <h2>Project 1</h2>
+                <h2>MPT-793S</h2>
                 <div class="header-action-area">
                     <a href="https://github.com/Oshintha/MPT-793S" class="btn">Github</a>
-                    <a href="https://camso.co/en/construction/products/mpt-793s/" class="btn btn-dark">Live Demo</a>
+                    <a href="https://camso.co/en/construction/products/mpt-793s/" target="_blank" class="btn btn-dark">Live Demo</a>
                 </div>
             </div>
 
@@ -254,10 +254,10 @@
 
             <div class="project">
                 <img src="images/Sks.png" alt="">
-                <h2>Project 2</h2>
+                <h2>SKS-793S</h2>
                 <div class="header-action-area">
                     <a href="https://github.com/Oshintha/SKS-793S" class="btn">Github</a>
-                    <a href="https://camso.co/en/construction/products/sks-793s/?pr=CO03&tireTechnology=3&productType=1218" class="btn btn-dark">Live Demo</a>
+                    <a href="https://camso.co/en/construction/products/sks-793s/?pr=CO03&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Live Demo</a>
                 </div>
             </div>
         </div>
