--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <p class="about-p">
-                    Product development professional with over 10 years' experience in product design, industrialization, and project management. Skilled in documentation and proficient in ERP (SAP), 2D/3D CAD (AutoCAD, SolidWorks, CATIA). Fluent in English, Sinhalese, and Finnish. Proven leadership with strong analytical and problem-solving abilities.
+                    Product development professional with over 10 years' experience in product design, industrialization, and project management. Skilled in documentation and proficient in ERP (SAP), PLM (Windchill), 2D/3D CAD (AutoCAD, SolidWorks, CATIA). Fluent in English, Sinhalese, and Finnish with basic proficiency. Experienced in design and development, having created more than 40 new tire sizes. Proven leadership with strong analytical and problem-solving abilities.
                 </p>
             </div>
         </div>
