add modified codes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header>
         <div class="container header-container">
             <div class="header-left">
-                <img class="header-image" src="images/oshintha_profile.jpg" alt="">
+                <img class="header-image" src="images/Oshintha_pp.jpg" alt="">
             </div>
             <div class="header-right">
                 <p>Hello I a'm</p>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <p class="about-p">
-                    Product development professional with over 10 years' experience in product design, industrialization, and project management. Skilled in documentation and proficient in ERP (SAP), 2D/3D CAD (AutoCAD, SolidWorks, CATIA). Fluent in English, Sinhalese, and Finnish. Proven leadership with strong analytical and problem-solving abilities.
+                    Experienced product developer skilled in design, industrialization, and project management with proficiency in ERP, PLM, and CAD. Fluent in English, Sinhalese, and basic Finnish. Created over 40 tire sizes, showcasing leadership and analytical abilities.
                 </p>
             </div>
         </div>
@@ -241,12 +241,15 @@
         </p>
         <h1 class="global-title-h1">Projects</h1>
         <div class="container project-container">
+            
+            <!-- first project -->
+
             <div class="project">
                 <img src="images/MPT.png" alt="">
                 <h2>MPT-793S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/MPT-793S" class="btn">Github</a>
-                    <a href="https://camso.co/en/construction/products/mpt-793s/" target="_blank" class="btn btn-dark">Live Demo</a>
+                    <a href="https://github.com/Oshintha/MPT-793S" class="btn">Design</a>
+                    <a href="https://camso.co/en/construction/products/mpt-793s/" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
 
@@ -256,10 +259,33 @@
                 <img src="images/Sks.png" alt="">
                 <h2>SKS-793S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/SKS-793S" class="btn">Github</a>
-                    <a href="https://camso.co/en/construction/products/sks-793s/?pr=CO03&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Live Demo</a>
+                    <a href="https://github.com/Oshintha/SKS-793S" class="btn">Design</a>
+                    <a href="https://camso.co/en/construction/products/sks-793s/?pr=CO03&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
+
+            <!-- third project -->
+
+            <div class="project">
+                <img src="images/TLH792S.png" alt="">
+                <h2>TLH-792S</h2>
+                <div class="header-action-area">
+                    <a href="https://github.com/Oshintha/TLH-792S" class="btn">Design</a>
+                    <a href="https://camso.co/en/construction/products/tlh-792s/" target="_blank" class="btn btn-dark">Application</a>
+                </div>
+            </div>
+
+            <!-- fouth project -->
+
+            <div class="project">
+                <img src="images/AWP583S.png" alt="">
+                <h2>AWP-583S</h2>
+                <div class="header-action-area">
+                    <a href="https://github.com/Oshintha/AWP-583S" class="btn">Design</a>
+                    <a href="https://camso.co/en/construction/products/awp-583s/?pr=CO74&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Application</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
