--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <img src="images/MPT.png" alt="">
                 <h2>MPT-793S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/MPT-793S" class="btn">Design</a>
+                    <a href="https://github.com/Oshintha/MPT-793S/blob/main/README.md" class="btn">Design</a>
                     <a href="https://camso.co/en/construction/products/mpt-793s/" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
@@ -259,7 +259,7 @@
                 <img src="images/Sks.png" alt="">
                 <h2>SKS-793S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/SKS-793S" class="btn">Design</a>
+                    <a href="https://github.com/Oshintha/SKS-793S/blob/main/README.md" class="btn">Design</a>
                     <a href="https://camso.co/en/construction/products/sks-793s/?pr=CO03&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
@@ -270,7 +270,7 @@
                 <img src="images/TLH792S.png" alt="">
                 <h2>TLH-792S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/TLH-792S" class="btn">Design</a>
+                    <a href="https://github.com/Oshintha/TLH-792S/blob/main/README.md" class="btn">Design</a>
                     <a href="https://camso.co/en/construction/products/tlh-792s/" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                 <img src="images/AWP583S.png" alt="">
                 <h2>AWP-583S</h2>
                 <div class="header-action-area">
-                    <a href="https://github.com/Oshintha/AWP-583S" class="btn">Design</a>
+                    <a href="https://github.com/Oshintha/AWP-583S/blob/main/README.md" class="btn">Design</a>
                     <a href="https://camso.co/en/construction/products/awp-583s/?pr=CO74&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
