add modified codes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Project</title>
+    <title>Portfolio - Oshintha Sandaruwan</title>
 </head>
 <link rel="stylesheet" href="web.css">
 <body>
@@ -278,11 +278,11 @@
             <!-- fouth project -->
 
             <div class="project">
-                <img src="images/AWP583S.png" alt="">
-                <h2>AWP-583S</h2>
+                <img src="images/AWP.png" alt="">
+                <h2>Solid Air AWP</h2>
                 <div class="header-action-area">
                     <a href="https://github.com/Oshintha/AWP-583S/blob/main/README.md" class="btn">Design</a>
-                    <a href="https://camso.co/en/construction/products/awp-583s/?pr=CO74&tireTechnology=3&productType=1218" target="_blank" class="btn btn-dark">Application</a>
+                    <a href="https://www.pulseo-generation.com/en/welcome/?lang=en" target="_blank" class="btn btn-dark">Application</a>
                 </div>
             </div>
 
