add modified codes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img class="header-image" src="images/Oshintha_pp.jpg" alt="">
             </div>
             <div class="header-right">
-                <p>Hello I a'm</p>
+                <p>Hello, I'm</p>
                 <h1>Oshintha Sandaruwan</h1>
                 <h2>Product Design and Development Engineer</h2>
                 <div class="header-action-area">
